--- a/pages/canvas-tutorial/canvas-tutorial.css
+++ b/pages/canvas-tutorial/canvas-tutorial.css
@@ -9,7 +9,7 @@ body {
     color: white;
 }
 
-#canvas1 {
+#canvas1, #canvas2, #canvas3 {
     border: 1px solid white;
 
     /* width and height must match the html element, otherwise, it will render distorted */
